Базовая сетка catalog.html завершена

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -75,12 +75,12 @@
                       <p class="value-range__row">
                         <label class="value-range__label" for="from-value">От</label>
                         <input class="value-range__input value-range__from-value" name="from-value" type="number"
-                          id="from-value" value="0">
+                          id="from-value" value="0" placeholder="0">
                       </p>
                       <p class="value-range__row">
                         <label class="value-range__label" for="to-value">До</label>
                         <input class="value-range__input value-range__to-value" name="to-value" type="number"
-                          id="to-value" value="15000">
+                          id="to-value" value="15000" placeholder="15000">
                       </p>
                     </div>
                   </div>
@@ -163,51 +163,63 @@
               <ul class="product">
                 <li class="product__item">
                   <img class="product__image" src="images/jpeg/img-sedona.jpg" width="360" height="576" alt="Sedona">
-                  <div class="product__info">
-                    <b class="product__title">Sedona</b>
-                    <p class="product__text">Информационный сайт для туристов</p>
-                    <button class="product__price button">9 900 руб.</button>
+                  <div class="product__popup">
+                    <div class="product__info">
+                      <b class="product__title">Sedona</b>
+                      <p class="product__text">Информационный сайт для туристов</p>
+                      <button class="product__price button">9 900 руб.</button>
+                    </div>
                   </div>
                 </li>
                 <li class="product__item">
                   <img class="product__image" src="images/jpeg/img-pink.jpg" width="360" height="576" alt="Pink">
-                  <div class="product__info">
-                    <b class="product__title">Pink App</b>
-                    <p class="product__text">Продуктовый лендинг приложения для iOS и Android</p>
-                    <button class="product__price button">9 900 руб.</button>
+                  <div class="product__popup">
+                    <div class="product__info">
+                      <b class="product__title">Pink App</b>
+                      <p class="product__text">Продуктовый лендинг приложения для iOS и Android</p>
+                      <button class="product__price button">9 900 руб.</button>
+                    </div>
                   </div>
                 </li>
                 <li class="product__item">
                   <img class="product__image" src="images/jpeg/img-barbershop.jpg" width="360" height="576"
                     alt="Barbershop">
-                  <div class="product__info">
-                    <b class="product__title">Barbershop</b>
-                    <p class="product__text">Сайт салона красоты. Для мужчин, да.</p>
-                    <button class="product__price button">9 900 руб.</button>
+                  <div class="product__popup">
+                    <div class="product__info">
+                      <b class="product__title">Barbershop</b>
+                      <p class="product__text">Сайт салона красоты. Для мужчин, да.</p>
+                      <button class="product__price button">9 900 руб.</button>
+                    </div>
                   </div>
                 </li>
                 <li class="product__item">
                   <img class="product__image" src="images/jpeg/img-mishka.jpg" width="360" height="576" alt="Mishka">
-                  <div class="product__info">
-                    <b class="product__title">Mishka</b>
-                    <p class="product__text">Интернет-магазин вязаных игрушек</p>
-                    <button class="product__price button">9 900 руб.</button>
+                  <div class="product__popup">
+                    <div class="product__info">
+                      <b class="product__title">Mishka</b>
+                      <p class="product__text">Интернет-магазин вязаных игрушек</p>
+                      <button class="product__price button">9 900 руб.</button>
+                    </div>
                   </div>
                 </li>
                 <li class="product__item">
                   <img class="product__image" src="images/jpeg/img-aplus.jpg" width="360" height="576" alt="Aplus">
-                  <div class="product__info">
-                    <b class="product__title">A Plus</b>
-                    <p class="product__text">Лендинг курсов повышения квалификации</p>
-                    <button class="product__price button">9 900 руб.</button>
+                  <div class="product__popup">
+                    <div class="product__info">
+                      <b class="product__title">A Plus</b>
+                      <p class="product__text">Лендинг курсов повышения квалификации</p>
+                      <button class="product__price button">9 900 руб.</button>
+                    </div>
                   </div>
                 </li>
                 <li class="product__item">
                   <img class="product__image" src="images/jpeg/img-kvast.jpg" width="360" height="576" alt="Kvast">
-                  <div class="product__info">
-                    <b class="product__title">Кваст</b>
-                    <p class="product__text">Промо-сайт производителя крафтового кваса</p>
-                    <button class="product__price button">9 900 руб.</button>
+                  <div class="product__popup">
+                    <div class="product__info">
+                      <b class="product__title">Кваст</b>
+                      <p class="product__text">Промо-сайт производителя крафтового кваса</p>
+                      <button class="product__price button">9 900 руб.</button>
+                    </div>
                   </div>
                 </li>
               </ul>
